--- a/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
+++ b/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   parameters:
     zitadelProjectId: 123455
+    accountId: "123455"
     groupNames:
       admin: techops-admin
       externalAccess: techops-users
