--- a/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
+++ b/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
@@ -5,12 +5,23 @@ metadata:
   namespace: testa
 spec:
   parameters:
-    zitadelProjectId: 123455
+    ccClusterName: "cc-cluster-name"
+    environments:
+      - "dev"
+      - "qa"
+      - "prod"
+    setupKey:
+      name: "setup-key-name"
+      namespace: "setup-key-namespace"
+      gwSetupKeySecretKey: "gw-setup-key-secret-key"
+      buildSetupKeySecretKey: "build-setup-key-secret-key"
     accountId: "123455"
+    zitadelProjectId: 123455
     groupNames:
       admin: techops-admin
       externalAccess: techops-users
-  providerConfigRef:
-    name: provider-config-aws
+  providerConfigsRef:
+    netbirdProviderConfigName: "netbird-provider-config-name"
+    k8sProviderConfigName: "k8s-provider-config-name"
   managementPolicies:
     - "*"
