--- a/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
+++ b/packages/netbird/compositions/post-config/test/scenarios/default/claim.yaml
@@ -15,7 +15,7 @@ spec:
       namespace: "setup-key-namespace"
       gwSetupKeySecretKey: "gw-setup-key-secret-key"
       buildSetupKeySecretKey: "build-setup-key-secret-key"
-    accountId: "123455"
+    accountId: "123455" ## TODO: Replace with api call to get account id
     zitadelProjectId: 123455
     groupNames:
       admin: techops-admin
