--- a/packages/utils/compositions/object-syncer/test/scenarios/configmap/claim.yaml
+++ b/packages/utils/compositions/object-syncer/test/scenarios/configmap/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: infitx.org/v1alpha1
-kind: ObjectSyncer
+kind: XObjectSyncer
 metadata:
   name: example-configmap-syncer-claim
   namespace: testa
