--- a/packages/utils/compositions/object-syncer/test/scenarios/secret/claim.yaml
+++ b/packages/utils/compositions/object-syncer/test/scenarios/secret/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: infitx.org/v1alpha1
-kind: ObjectSyncer
+kind: XObjectSyncer
 metadata:
   name: example-secret-syncer-claim
   namespace: testa
@@ -17,4 +17,3 @@ spec:
     destinationK8sProviderName: kubernetes-provider
   managementPolicies:
     - "*"
-
