--- a/packages/buckets/compositions/object-store/configuration/crossplane.yaml
+++ b/packages/buckets/compositions/object-store/configuration/crossplane.yaml
@@ -2,7 +2,7 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: utils
+  name: object-store
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
