--- a/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
+++ b/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
@@ -1,12 +1,12 @@
 apiVersion: infitx.org/v1alpha1
 kind: XObjectStore
 metadata:
-  name: my-example-bucket
+  name: example-object-store
 spec:
   objectStoreProvider: "aws"
   parameters:
     bucketName: "my-example-bucket"
-    Namespace: temp
+    Namespace: default
     bucketRegion: "us-east-1"
     maxSize: "20Gi"
     eso_pushsecret: false
