--- a/packages/netbird/compositions/post-config/resources/composition.yaml
+++ b/packages/netbird/compositions/post-config/resources/composition.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   compositeTypeRef:
     apiVersion: netbird.infitx.org/v1alpha1
-    kind: PostConfig
+    kind: XPostConfig
   mode: Pipeline
   pipeline:
 
