--- a/packages/buckets/compositions/ceph-buckets/resources/definition.yaml
+++ b/packages/buckets/compositions/ceph-buckets/resources/definition.yaml
@@ -85,6 +85,10 @@ spec:
                         type: string
                         description: Maximum number of objects in the bucket
                         default: "10000"
+                      objectStore_ext_svc_name:
+                        type: string
+                        description: Name of the external service to use for the bucket creation.
+                        default: "object-store-external-svc"
                   secret:
                     type: object
                     description: |-
