--- a/packages/databases/compositions/sql-percona/resources/composition.yaml
+++ b/packages/databases/compositions/sql-percona/resources/composition.yaml
@@ -3,10 +3,10 @@ kind: Composition
 metadata:
   name: sqlpercona
   labels:
-    crossplane.io/xrd: xsqlpercona.database.infitx.org
+    crossplane.io/xrd: xsqlpercona.database.mojaloop.io
 spec:
   compositeTypeRef:
-    apiVersion: database.infitx.org/v1alpha1
+    apiVersion: database.mojaloop.io/v1alpha1
     kind: XSqlPercona
   mode: Pipeline
   pipeline:
