--- a/packages/buckets/compositions/object-store/resources/definition.yaml
+++ b/packages/buckets/compositions/object-store/resources/definition.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xobjectstore.infitx.org
+  name: xobjectstore.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
-  group: infitx.org
+  group: mojaloop.io
   names:
     kind: XObjectStore
     plural: xobjectstore
