--- a/packages/utils/compositions/object-syncer/resources/definition.yaml
+++ b/packages/utils/compositions/object-syncer/resources/definition.yaml
@@ -1,10 +1,10 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: xobjectsyncer.infitx.org
+  name: xobjectsyncer.utils.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
-  group: infitx.org
+  group: utils.mojaloop.io
   names:
     kind: XObjectSyncer
     plural: xobjectsyncer
