--- a/packages/buckets/compositions/object-store/resources/definition.yaml
+++ b/packages/buckets/compositions/object-store/resources/definition.yaml
@@ -41,93 +41,97 @@ spec:
                     - "*"
                   type: string
                 type: array
-              objectStoreProvider:
-                type: string
-                description: |-
-                  The type of object store provider to use.
-                default: "aws"
-              providerConfigsRef:
-                type: object
-                description: |-
-                  The name of the provider config to use.
-                properties:
-                  scK8sProviderName:
-                    type: string
-                    description: The name of the provider config to use for the local k8s provider.
-                    default: "sc-kubernetes-provider"
-                  ccK8sProviderName:
-                    type: string
-                    description: The name of the provider config to use for the remote k8s provider.
-                    default: "kubernetes-provider"
-                  awsProviderName:
-                    type: string
-                    description: |-
-                      The name of the provider config to use for the AWS provider.
-                    default: "aws-cp-upbound-provider-config"
               parameters:
                 type: object
                 properties:
+                  objectStoreProvider:
+                    type: string
+                    description: |-
+                      The type of object store provider to use.
+                    default: "ceph"
                   bucketName:
                     type: string
                     description: Name of the bucket to create
-                  storageClassName:
-                    type: string
-                    description: Storage class to use for the bucket creation
-                    default: "ceph-bucket"
-                  maxSize:
-                    type: string
-                    description: Maximum size of the bucket
-                    default: "10Gi"
-                  maxObjects:
-                    type: string
-                    description: Maximum number of objects in the bucket
-                    default: "1000"
-                  objectStore_ext_svc_name:
-                    type: string
-                    description: Name of the external service to use for the bucket creation.
-                    default: "object-store-external-svc"
+                  ceph:
+                    type: object
+                    description: Ceph bucket variables.
+                    properties:
+                      scK8sProviderName:
+                        type: string
+                        description: The name of the provider config to use for the local k8s provider.
+                        default: "sc-kubernetes-provider"
+                      ccK8sProviderName:
+                        type: string
+                        description: The name of the provider config to use for the remote k8s provider.
+                        default: "kubernetes-provider"
+                      storageClassName:
+                        type: string
+                        description: Storage class to use for the bucket creation
+                        default: "ceph-bucket"
+                      maxSize:
+                        type: string
+                        description: Maximum size of the bucket
+                        default: "10Gi"
+                      maxObjects:
+                        type: string
+                        description: Maximum number of objects in the bucket
+                        default: "1000"
+                      objectStore_ext_svc_name:
+                        type: string
+                        description: Name of the external service to use for the bucket creation.
+                        default: "object-store-external-svc"
+                      eso_pushsecret:
+                        type: boolean
+                        description: Whether to push the secret to vault.
+                        default: false
+                      eso_push_secret_update_policy:
+                        type: string
+                        description: Policy to update the secret on vault.
+                        default: "Replace"
+                      eso_push_secret_delete_policy:
+                        type: string
+                        description: Policy to delete the secret on vault.
+                        default: "Delete"
+                      eso_push_secret_refresh_interval:
+                        type: string
+                        description: Interval to refresh the secret on vault.
+                        default: "1h"
+                      vault_secrestore_name:
+                        type: string
+                        description: Name of the secretstore on cluster for vault.
+                        default: "vault-secret-store"
+                      vault_secret_store_kind:
+                        type: string
+                        description: Kind of the secret store in vault.
+                        default: "ClusterSecretStore"
+                      vault_secret_path:
+                        type: string
+                        description: Path of the secret in vault.
+                  s3:
+                    type: object
+                    description: AWS bucket variables.
+                    properties:
+                      awsProviderName:
+                        type: string
+                        description: |-
+                          The name of the provider config to use for the AWS provider.
+                        default: "aws-cp-upbound-provider-config"
+                      bucketRegion:
+                        type: string
+                        description: Region of the bucket
+                        default: "eu-west-1"
+                      forceDestroy:
+                        type: boolean
+                        description: Force destroy the bucket if it is not empty.
+                        default: false
+                      deletionPolicy:
+                        type: string
+                        description: |-
+                          The deletion policy to use for the bucket.
+                          If set to "Delete", the bucket will be deleted when the claim is deleted.
+                          If set to "Retain", the bucket will be retained when the claim is deleted.
+                        default: "Delete"
                   Namespace:
                     type: string
                     description: Namespace of the bucket claim to create
-                  bucketRegion:
-                    type: string
-                    description: Region of the bucket
-                    default: "eu-west-1"
-                  forceDestroy:
-                    type: boolean
-                    description: Force destroy the bucket if it is not empty.
-                    default: false
-                  deletionPolicy:
-                    type: string
-                    description: |-
-                      The deletion policy to use for the bucket.
-                      If set to "Delete", the bucket will be deleted when the claim is deleted.
-                      If set to "Retain", the bucket will be retained when the claim is deleted.
-                    default: "Delete"
-                  eso_pushsecret:
-                    type: boolean
-                    description: Whether to push the secret to vault.
-                    default: false
-                  eso_push_secret_update_policy:
-                    type: string
-                    description: Policy to update the secret on vault.
-                    default: "Replace"
-                  eso_push_secret_delete_policy:
-                    type: string
-                    description: Policy to delete the secret on vault.
-                    default: "Delete"
-                  eso_push_secret_refresh_interval:
-                    type: string
-                    description: Interval to refresh the secret on vault.
-                    default: "1h"
-                  vault_secrestore_name:
-                    type: string
-                    description: Name of the secretstore on cluster for vault.
-                    default: "vault-secret-store"
-                  vault_secret_store_kind:
-                    type: string
-                    description: Kind of the secret store in vault.
-                    default: "ClusterSecretStore"
-                  vault_secret_path:
-                    type: string
-                    description: Path of the secret in vault.
+
