--- a/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
+++ b/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
@@ -3,12 +3,20 @@ kind: XObjectStore
 metadata:
   name: example-object-store
 spec:
-  objectStoreProvider: "ceph"
   parameters:
-    bucketName: "my-example-bucket"
+    objectStoreProvider: "ceph"
+    bucketName: "my-example-bucket2"
     Namespace: temp
-    bucketRegion: "us-east-1"
-    maxSize: "10Gi"
-    eso_pushsecret: false
-    vault_secrestore_name: "vault-backend"
-    vault_secret_path: "objectstore/my_example_bucket"
+    s3:
+      awsProviderName: "aws-cp-upbound-provider-config"
+      bucketRegion: "us-east-1"
+      forceDestroy: true
+      deletionPolicy: "Delete"
+    ceph:
+      scK8sProviderName: "sc-kubernetes-provider"
+      ccK8sProviderName: "kubernetes-provider"
+      storageClassName: "ceph-bucket"
+      maxSize: "10Gi"
+      eso_pushsecret: true
+      vault_secrestore_name: "vault-backend"
+      vault_secret_path: "objectstore/my_example_bucket"
