--- a/packages/documentdb/compositions/docdbcluster/resources/definition.yaml
+++ b/packages/documentdb/compositions/docdbcluster/resources/definition.yaml
@@ -66,68 +66,56 @@ spec:
                   documentdb:
                     type: object
                     properties:
-                      region:
-                        description: Region
+                      allowMajorVersionUpgrade:
+                        description: Indicates that major version upgrades are allowed
+                        type: boolean
+                      applyImmediately:
+                        description: Indicates that changes should be applied immediately
+                        type: boolean
+                      availabilityZones:
+                        description: The availability zones
+                        type: array
+                        items:
+                          type: string
+                      backupRetentionPeriod:
+                        description: The number of days to retain backups for
+                        type: integer
+                      dbClusterInstanceClass:
+                        description: "Db instance class"
                         type: string
+                      deletionProtection:
+                        description: Indicates that deletion protection is enabled
+                        type: boolean
+                      enabledCloudwatchLogsExports:
+                        description: Indicates that cloudwatch logs are enabled
+                        type: boolean
                       engine:
                         description: The DB engine i.e mysql/postgres
                         type: string
                       engineVersion:
                         description: The DB version depends on the DB type and versions available in the selected provider.
                         type: string
-                      dbClusterInstanceClass:
-                        description: "Db instance class"
+                      family:
+                        description: The family of the parameter group
                         type: string
-                      storageGB:
-                        description: "Storage size"
-                        type: integer
-                      port:
-                        description: "Port at which db server listens"
-                        type: integer
-                        default: 5432
-                      vpcId:
-                        description: Vpc id
+                      finalSnapshotIdentifier:
+                        description: The final snapshot identifier
                         type: string
-                      vpcCidr:
-                        description: Vpc CIDR
-                        type: string
-                      subnets:
-                        description: The list of subnet-ids to create the subnetgroup
+                      parameter:
+                        description: The parameter group
                         type: array
                         items:
-                          type: string
-                      username:
-                        description: The name of master user
-                        type: string
-                      storageEncrypted:
-                        description: The type of storage
-                        type: boolean
-                        default: true
-                      storageType:
-                        description: The type of storage
-                        type: string
-                      storageIops:
-                        description: The IOPS for storage
-                        type: integer
-                      backupRetentionPeriod:
-                        description: The number of days to retain backups for
-                        type: integer
-                      preferredBackupWindow:
-                        description: The daily time range during which automated backups are created
-                        type: string
-                      allowMajorVersionUpgrade:
-                        description: Indicates that major version upgrades are allowed
-                        type: boolean
-                      autoMinorVersionUpgrade:
-                        description: Indicates that minor version upgrades are applied automatically
-                        type: boolean
-                      applyImmediately:
-                        description: Indicates that changes should be applied immediately
-                        type: boolean
-                      skipFinalSnapshot:
-                        description: Indicates that final snapshot should be skipped before destroy
-                        type: boolean
-                        default: false
+                          type: object
+                          properties:
+                            applyMethod:
+                              description: The apply method of the parameter
+                              type: string
+                            name:
+                              description: The name of the parameter
+                              type: string
+                            value:
+                              description: The value of the parameter
+                              type: string
                       passwordSecret:
                         description: The secret reference to the password of the master user.
                         type: object
@@ -138,3 +126,47 @@ spec:
                           key:
                             description: The key in the secret.
                             type: string
+                      port:
+                        description: "Port at which db server listens"
+                        type: integer
+                        default: 5432
+                      preferredBackupWindow:
+                        description: The daily time range during which automated backups are created
+                        type: string
+                      preferredMaintenanceWindow:
+                        description: The preferred maintenance window
+                        type: string
+                      region:
+                        description: Region
+                        type: string
+                      restoreToPointInTime:
+                        description: The point in time to restore to
+                        type: string
+                      skipFinalSnapshot:
+                        description: Indicates that final snapshot should be skipped before destroy
+                        type: boolean
+                        default: false
+                      snapshotIdentifier:
+                        description: The snapshot identifier
+                        type: string
+                      storageEncrypted:
+                        description: The type of storage
+                        type: boolean
+                        default: true
+                      storageType:
+                        description: The type of storage
+                        type: string
+                      subnets:
+                        description: The list of subnet-ids to create the subnetgroup
+                        type: array
+                        items:
+                          type: string
+                      username:
+                        description: The name of master user
+                        type: string
+                      vpcCidr:
+                        description: Vpc CIDR
+                        type: string
+                      vpcId:
+                        description: Vpc id
+                        type: string
