--- a/packages/documentdb/configuration/crossplane.yaml
+++ b/packages/documentdb/configuration/crossplane.yaml
@@ -8,6 +8,8 @@ spec:
       version: ">=v1.21.0"
     - provider: xpkg.upbound.io/upbound/provider-aws-docdb
       version: ">=v1.21.0"
+    - provider: xpkg.upbound.io/upbound/provider-aws-ec2
+      version: ">=v1.21.0"
     ## Functions
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
       version: ">=v0.9.0"
