--- a/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
+++ b/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
@@ -17,16 +17,17 @@ spec:
       engine: "docdb"
       engineVersion: "4.0"
       dbClusterInstanceClass: "db.r5.large"
-      storageGB: 100
       port: 27017
-      vpcId: "vpc-12345678"
+      vpcId: "vpc-0271a5e44676a5443"
       vpcCidr: "10.0.0.0/16"
       subnets:
-        - "subnet-11111111"
-        - "subnet-22222222"
+        - "subnet-069e236a1ed7dc46e"
+        - "subnet-0ea1f4922f23fd864"
+        - "subnet-0ec26f852579a3c5c"
       availabilityZones:
-       - "us-east-1a"
-       - "us-east-1b"
+        - "eu-west-1a"
+        - "eu-west-1b"
+        - "eu-west-1c"
       username: "admin"
       storageEncrypted: true
       storageType: "gp2"
@@ -37,7 +38,6 @@ spec:
       applyImmediately: false
       skipFinalSnapshot: false
       deletionProtection: false
-      enabledCloudwatchLogsExports: false
       family: "docdb5.0"
       parameter:
        - name: "example-db-param"
@@ -45,3 +45,4 @@ spec:
       passwordSecret:
         name: "example-db-secret"
         key: "password"
+        namespace: "default"
