--- a/packages/documentdb/configuration/crossplane.yaml
+++ b/packages/documentdb/configuration/crossplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: utils
+  name: documentdb
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/upbound/provider-family-aws
