--- a/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
+++ b/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
@@ -1,5 +1,5 @@
 apiVersion: database.mojaloop.io/v1alpha1
-kind: DocDbCluster
+kind: XDocDbCluster
 metadata:
   name: example-docdb-cluster
   namespace: default
