--- a/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
+++ b/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
@@ -6,7 +6,8 @@ metadata:
 spec:
   managementPolicies:
     - "*"
-  providerConfigsRef: "example-provider-config"
+  providerConfigsRef:
+      awsProviderConfigName: "aws-provider"
   parameters:
     dbType: "documentdb"
     dbName: "exampledb"
@@ -22,27 +23,27 @@ spec:
       dbClusterInstanceClass: "db.r5.large"
       deletionProtection: false
       engine: "docdb"
-      engineVersion: "4.0"
+      engineVersion: "5.0"
       family: "docdb5.0"
       instanceCount: 3
       parameter:
-      - name: "example-db-param"
-        value: "example-db-value"
+      - name: "audit_logs"
+        value: "disabled"
       passwordSecret:
-      key: "password"
-      name: "example-db-secret"
-      namespace: "default"
+        key: "password"
+        name: "example-db-secret"
+        namespace: "default"
       port: 27017
-      preferredBackupWindow: "00:00-02:00"
-      preferredMaintenanceWindow: "00:00-02:00"
-      region: "us-east-1"
+      preferredBackupWindow: "02:00-04:00"
+      preferredMaintenanceWindow: "Tue:23:45-Wed:00:15"
+      region: "eu-west-1"
       skipFinalSnapshot: false
       storageEncrypted: true
-      storageType: "gp2"
+      storageType: "standard"
       subnets:
       - "subnet-069e236a1ed7dc46e"
       - "subnet-0ea1f4922f23fd864"
       - "subnet-0ec26f852579a3c5c"
-      username: "admin"
+      username: "mojaloop"
       vpcCidr: "10.0.0.0/16"
       vpcId: "vpc-0271a5e44676a5443"
