--- a/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
+++ b/packages/documentdb/compositions/docdbcluster/test/scenarios/documentdb/claim.yaml
@@ -1,7 +1,7 @@
 apiVersion: database.mojaloop.io/v1alpha1
 kind: XDocDbCluster
 metadata:
-  name: example-docdb-cluster
+  name: example-documentdb-cluster
   namespace: default
 spec:
   managementPolicies:
@@ -15,17 +15,13 @@ spec:
     documentdb:
       allowMajorVersionUpgrade: false
       applyImmediately: false
-      availabilityZones:
-      - "eu-west-1a"
-      - "eu-west-1b"
-      - "eu-west-1c"
       backupRetentionPeriod: 7
-      dbClusterInstanceClass: "db.r5.large"
+      dbClusterInstanceClass: "db.t3.medium"
       deletionProtection: false
       engine: "docdb"
       engineVersion: "5.0"
       family: "docdb5.0"
-      instanceCount: 3
+      instanceCount: 1
       parameter:
       - name: "audit_logs"
         value: "disabled"
@@ -37,13 +33,11 @@ spec:
       preferredBackupWindow: "02:00-04:00"
       preferredMaintenanceWindow: "Tue:23:45-Wed:00:15"
       region: "eu-west-1"
-      skipFinalSnapshot: false
+      skipFinalSnapshot: true
+      finalSnapshotIdentifier: "example-documentdb-cluster"
       storageEncrypted: true
       storageType: "standard"
-      subnets:
-      - "subnet-069e236a1ed7dc46e"
-      - "subnet-0ea1f4922f23fd864"
-      - "subnet-0ec26f852579a3c5c"
+      subnets: "subnet-069e236a1ed7dc46e,subnet-0ea1f4922f23fd864,subnet-0ec26f852579a3c5c"
       username: "mojaloop"
       vpcCidr: "10.0.0.0/16"
       vpcId: "vpc-0271a5e44676a5443"
