--- a/packages/utils/compositions/remote-namespace/resources/composition.yaml
+++ b/packages/utils/compositions/remote-namespace/resources/composition.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: namespace
+  name: remotenamespace
   labels:
-    crossplane.io/xrd: xnamespace.utils.mojaloop.io
+    crossplane.io/xrd: remotenamespace.utils.mojaloop.io
 spec:
   compositeTypeRef:
     apiVersion: utils.mojaloop.io/v1alpha1
-    kind: XNamespace
+    kind: XRemoteNamespace
   mode: Pipeline
   pipeline:
 
