--- a/packages/sc-pgcluster/compositions/pgcluster/resources/composition.yaml
+++ b/packages/sc-pgcluster/compositions/pgcluster/resources/composition.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: Composition
 metadata:
-  name: pg
+  name: pgcluster
   labels:
-    crossplane.io/xrd: xpg.sc.mojaloop.io
+    crossplane.io/xrd: xpgcluster.sc.mojaloop.io
 spec:
   compositeTypeRef:
     apiVersion: sc.mojaloop.io/v1alpha1
-    kind: XPG
+    kind: XPGCluster
   mode: Pipeline
   pipeline:
 
