--- a/packages/aws-docdbcluster/compositions/docdbcluster/resources/composition.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/resources/composition.yaml
@@ -3,10 +3,10 @@ kind: Composition
 metadata:
   name: docdbcluster
   labels:
-    crossplane.io/xrd: xdocdbcluster.database.mojaloop.io
+    crossplane.io/xrd: xdocdbcluster.aws.mojaloop.io
 spec:
   compositeTypeRef:
-    apiVersion: database.mojaloop.io/v1alpha1
+    apiVersion: aws.mojaloop.io/v1alpha1
     kind: XDocDbCluster
   mode: Pipeline
   pipeline:
