--- a/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
+++ b/packages/aws-docdbcluster/compositions/docdbcluster/test/scenarios/standard/claim.yaml
@@ -1,4 +1,4 @@
-apiVersion: database.mojaloop.io/v1alpha1
+apiVersion: aws.mojaloop.io/v1alpha1
 kind: XDocDbCluster
 metadata:
   name: example-documentdb-cluster
