take namespace as input

--- a/packages/databases/compositions/sql-percona/resources/definition.yaml
+++ b/packages/databases/compositions/sql-percona/resources/definition.yaml
@@ -72,6 +72,9 @@ spec:
                   externalServiceName:
                     type: string
                     description: Name for the external service object created
+                  appNamespace:
+                    type: string
+                    description: Namespace for the consumer application
                   postgres:
                     type: object
                     properties:
