--- a/packages/databases/compositions/sql-percona/resources/definition.yaml
+++ b/packages/databases/compositions/sql-percona/resources/definition.yaml
@@ -60,7 +60,7 @@ spec:
               parameters:
                 type: object
                 properties:
-                  consumeClusterType:
+                  consumerClusterType:
                     type: string
                     description: Type of consumer cluster
                     enum:
