--- a/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
+++ b/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: namespace
 spec:
   parameters:
-    consumeClusterType: controlcenter
+    consumerClusterType: controlcenter
     clusterName: cluster_name #TODO
     externalServiceName: externalservice_name
     appNamespace: foo
