--- a/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
+++ b/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
@@ -13,6 +13,7 @@ spec:
       crVersion: "2.5.0"
       pgVersion: 16
       dbSecret: db_secret
+      dbUsername: dbuser
       replicas: 1
       storageSize: postgres_storage_size
 
