--- a/packages/databases/compositions/sql-percona/resources/definition.yaml
+++ b/packages/databases/compositions/sql-percona/resources/definition.yaml
@@ -91,6 +91,9 @@ spec:
                         description: Type of object to be synced
                       dbUsername:
                         type: string
+                        description: Name of the database user to be created
+                      dbName:
+                        type: string
                         description: Name of the database to be created
                       replicas:
                         type: number
