--- a/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
+++ b/packages/databases/compositions/sql-percona/test/scenarios/postgres/claim.yaml
@@ -14,6 +14,7 @@ spec:
       pgVersion: 16
       dbSecret: db_secret
       dbUsername: dbuser
+      dbName: dbname
       replicas: 1
       storageSize: postgres_storage_size
 
