chore: test new cicd

--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -6,47 +6,79 @@ on:
       package:
         required: true
         type: string
-        description: "Crossplane package to package and release"
       registry:
         required: true
         type: string
-        description: "Container registry URL"
       packages_dir:
         required: true
         type: string
-        description: "Directory containing Crossplane packages"
       release_name:
         required: false
         type: string
-        description: "Release tag/version name"
-
     secrets:
       REGISTRY_USERNAME:
-        description: "Username for container registry to login"
         required: true
       REGISTRY_PASSWORD:
-        description: "Password for container registry to login"
         required: true
 
 jobs:
   pull-request-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🧪 PR Preview Package
     if: ${{ github.ref_type != 'tag' && github.ref != 'refs/heads/main' }}
-    secrets: inherit
-    with:
-      CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
-      CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
-      SUBPATH: ${{ inputs.package }}
-      NEXT_VERSION: v${{ github.event.pull_request.number }}-${{ github.run_id }}-${{ github.run_attempt }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 🔢 Calculate PR Pre-Release Version
+        id: version
+        run: |
+          bash .github/scripts/get-next-version.sh ${{ inputs.package }} > base_version.txt
+          BASE_VERSION=$(cat base_version.txt)
+          SUFFIX="-pr${{ github.event.pull_request.number }}-${{ github.run_id }}"
+          echo "next_version=${BASE_VERSION}${SUFFIX}" >> $GITHUB_OUTPUT
+
+      - name: 🚀 Build & Push
+        uses: ./.github/workflows/xplane_pull_request.yaml
+        with:
+          CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
+          CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
+          SUBPATH: ${{ inputs.package }}
+          NEXT_VERSION: v${{ steps.version.outputs.next_version }}
+          REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
 
   release-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🚀 Release Package
-    if: ${{ github.ref_type == 'tag' }}
-    secrets: inherit
-    with:
-      CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
-      CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
-      SUBPATH: ${{ inputs.package }}
-      NEXT_VERSION: ${{ inputs.release_name }}
+    if: ${{ github.ref_type == 'tag' || github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: 🔢 Calculate Release Version
+        id: version
+        run: |
+          bash .github/scripts/get-next-version.sh ${{ inputs.package }} > next_version.txt
+          VERSION=$(cat next_version.txt)
+          echo "next_version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: 🚀 Build & Push
+        uses: ./.github/workflows/xplane_pull_request.yaml
+        with:
+          CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
+          CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
+          SUBPATH: ${{ inputs.package }}
+          NEXT_VERSION: v${{ steps.version.outputs.next_version }}
+          REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
+          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
